--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8088
 spring.jpa.open-in-view=false
 
-spring.profiles.active=${APP_PROFILES:dev}
+spring.profiles.active=${APP_PROFILES:test}
